--- a/src/web/stylesheets/common/pages/leaderboard/style.scss
+++ b/src/web/stylesheets/common/pages/leaderboard/style.scss
@@ -26,26 +26,17 @@
 }
 
 .wrapper{
-  width: 80%;
+
   margin: auto;
   margin-top: 1rem;
-
-  @include gm.media-breakpoint-up(sm) {
-    width: 60%;
-  }
-
-  @include gm.media-breakpoint-up(md) {
-    width: 40%;
-  }
 }
 
-.controls-container{
+.controls-container {
   display: flex;
   gap:1rem;
-  margin-bottom: 3rem;
 }
 
-.control{
+.control {
   outline: none;
   border: 1px solid gt.theme-var(leaderboard-control-border-color, null, $thememaplight, $cssvars);
   border-radius: 12px;
@@ -54,32 +45,32 @@
   padding-left: 35px;
 }
 
-.search-box-container{
+.search-box-container {
   flex-grow: 20;
   color: gt.theme-var(text-color-1);
 
   .search-box{
     @include gm.box(100%, 100%);
-    padding-left: 40px;
+    padding-left: 42px;
   }
 }
 
-.search-box::placeholder{
+.search-box::placeholder {
   color: gt.theme-var(text-color-1);
 }
 
 .filter-btn-container{
   flex-grow: 1;
 
-  .filter-btn{
+  .filter-btn {
     width: 100%;
   }
 }
 
-.control-with-icon{
+.control-with-icon {
   position: relative;
 
-  .icon{
+  .icon {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -87,13 +78,115 @@
   }
 }
 
-.leaderboard-table{
+.leaderboard-table {
   width: 100%;
+  border-collapse: separate;
+  border-spacing: 1rem 2rem;
 
-  th{
+  th {
     color:gt.theme-var(text-color-5);
   }
-  th:last-child{
-    text-align: end;
+
+  .name-with-profile-picture {
+    display: flex;
+    align-items: center;
+
+    .profile-picture img,
+    img.profile-picture{
+      width: 36px;
+      height: 36px;
+
+      @include gm.media-breakpoint-up(md) {
+        width: 56px;
+        height: 56px;
+      }
+      border-radius: 50%;
+      margin-right: .5rem;
+    }
   }
+
+  tr td:last-child {
+    width: 1%;
+    white-space: nowrap;
+  }
+}
+
+.paginator .btn-primary {
+  color: gt.theme-var(text-color-2);
+}
+
+.skeleton {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.75rem;
+  overflow: hidden;
+
+  .skeleton-body {
+    width: 100%;
+    height: 100%;
+    min-height: 10rem;
+  }
+
+  .rank-cell div{
+    width: 55%;
+    height: 2rem;
+    border-radius: 0.5rem;
+  }
+
+  .name-with-profile-picture div.profile-picture{
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+
+    @include gm.media-breakpoint-up(md) {
+      width: 56px;
+      height: 56px;
+    }
+  }
+
+  .name-with-profile-picture div.name{
+    width: 190px;
+    height: 2rem;
+    margin-left: .5rem;
+    border-radius: 0.5rem;
+  }
+
+  .coins-cell div{
+    height: 2rem;
+    border-radius: 0.5rem;
+  }
+
+  .skeleton-body,
+  .rank-cell div,
+  .name-with-profile-picture div.profile-picture,
+  .name-with-profile-picture div.name,
+  .coins-cell div {
+    animation: refresh 2.5s ease-out infinite;
+    background-image: linear-gradient(90deg, gt.theme-var(text-color-6), gt.theme-var(bg-3) 30px, gt.theme-var(skeleton-bg) 60px);
+    background-size: 200%;
+  }
+}
+
+@keyframes refresh {
+  0% {
+    background-position: -100%;
+  }
+
+  100% {
+    background-position: 100%;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gt.theme-var(skeleton-bg);
+  border-radius: 0.5rem;
 }
