--- a/src/web/stylesheets/common/pages/certificates/style.scss
+++ b/src/web/stylesheets/common/pages/certificates/style.scss
@@ -1,5 +1,6 @@
 @use '../../sass/themes/_default' as gt;
 @use '../../sass/base/_mixins' as gm;
+@use '../../sass/components/turtle-certificate';
 
 @import './_certificateTheme.js';
 
@@ -17,6 +18,32 @@
           background-color: gt.theme-var(certificate-nav-active-bg, null, $thememaplight, $cssvars);
         }
       }
+    }
+  }
+
+  .account-nav {
+    @include gm.media-breakpoint-down(sm) {
+      display: none;
+    }
+
+    .account-nav-container {
+      .account-nav-item-container {
+        .account-nav-item {
+          padding: 0.75rem;
+        }
+      }
+    }
+  }
+
+  .certificate-container,
+  .more-certificates-container {
+    canvas {
+      height: 9rem !important;
+      width: auto !important;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      margin-right: 0.5rem;
+      margin-left: 0.5rem;
     }
   }
 }
