--- a/src/web/stylesheets/common/sass/components/_modal.scss
+++ b/src/web/stylesheets/common/sass/components/_modal.scss
@@ -122,6 +122,7 @@
     .modal-dialog {
       .modal-content {
         border-radius: 1rem;
+        overflow: hidden;
 
         button,
         a {
