--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -24,6 +24,7 @@ $thememaplight : (
   bg-2: #212527,
   bg-3: #ededed,
   skeleton-bg: #13224125,
+  tc-font-color: #000,
 );
 // just copied the light theme colors to the dark for now
 // TODO: make this a real dark theme with appropriate colors
@@ -53,6 +54,7 @@ $thememapdark : (
   bg-2: #fff,
   bg-3: #ededed,
   skeleton-bg: #13224125,
+  tc-font-color: #000,
 );
 
 $cssvars : (
@@ -81,6 +83,7 @@ $cssvars : (
   bg-2: --bg-2,
   bg-3: --bg-3,
   skeleton-bg: --skeleton-bg,
+  tc-font-color: --tc-font-color,
 );
 
 @mixin spread-map($map: (), $cssMap: $cssvars) {
