--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -23,6 +23,7 @@ $thememaplight : (
   bg-1: #fff,
   bg-2: #212527,
   bg-3: #ededed,
+  modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
 );
@@ -53,6 +54,7 @@ $thememapdark : (
   bg-1: #212527,
   bg-2: #fff,
   bg-3: #ededed,
+  modal-close-btn-bg: #ff5a79,
   skeleton-bg: #13224125,
   tc-font-color: #000,
 );
@@ -82,6 +84,7 @@ $cssvars : (
   bg-1: --bg-1,
   bg-2: --bg-2,
   bg-3: --bg-3,
+  modal-close-btn-bg: --modal-close-btn-bg,
   skeleton-bg: --skeleton-bg,
   tc-font-color: --tc-font-color,
 );
