--- a/src/web/stylesheets/common/sass/components/_help-modal.scss
+++ b/src/web/stylesheets/common/sass/components/_help-modal.scss
@@ -4,31 +4,58 @@
 .modal.help-modal {
   padding: 0;
 
+  // .modal-dialog {
+  //   max-width: 950px;
+  // }
   .modal-dialog {
-    max-width: 950px;
+    @include gm.media-breakpoint-up(md) {
+      max-width: 50%;
+    }
   }
 
-  .modal-header {
-    border: none;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-    margin-bottom: 0.8rem;
+  .modal-body {
+    padding: 0;
+  }
+
+  // .modal-header {
+  //   border: none;
+  //   border-top-left-radius: 1rem;
+  //   border-top-right-radius: 1rem;
+  //   margin-bottom: 0.8rem;
+  //   background-color: gt.theme-var(text-color-11);
+  //   align-items: center;
+
+  //   .close {
+  //     border-radius: 0.3rem;
+  //     padding: 0.3rem 0.8rem;
+  //     padding-bottom: 0.6rem;
+  //     margin-right: 0.2rem;
+  //     display: inline-block;
+  //     background-color: red;
+  //     color: white;
+  //     font-size: 2rem;
+
+  //     &:hover {
+  //       color: white;
+  //     }
+  //   }
+  // }
+
+  .modal-custom-header {
     background-color: gt.theme-var(text-color-11);
-    align-items: center;
+    padding: 0.75rem;
 
-    .close {
-      border-radius: 0.3rem;
-      padding: 0.3rem 0.8rem;
-      padding-bottom: 0.6rem;
-      margin-right: 0.2rem;
-      display: inline-block;
-      background-color: red;
-      color: white;
-      font-size: 2rem;
+    .modal-title {
+      font-weight: bold;
+    }
 
-      &:hover {
-        color: white;
-      }
+    button.close {
+      color: gt.theme-var(text-color-2);
+      font-size: 2.5rem;
+      background: gt.theme-var(modal-close-btn-bg);
+      padding: 0.125rem 0.6rem 0.45rem;
+      line-height: 0.75;
+      opacity: 1;
     }
   }
 
